--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-08 21:47 -->
+<!-- 2022-11-10 02:49 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org83ec870">1. 暑假</a>
+<li><a href="#org3207662">1. 暑假</a>
 <ul>
-<li><a href="#orgb33714c">1.1. 夏令营</a></li>
+<li><a href="#org6ea747c">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org0719488">2. 打工</a></li>
-<li><a href="#org51f21c5">3. 我的928</a>
+<li><a href="#org82460eb">2. 打工</a></li>
+<li><a href="#orgca1aeb1">3. 我的928</a>
 <ul>
-<li><a href="#org89ece7d">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org28260d9">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgb8ee158">4. 他们的928</a></li>
-<li><a href="#org76ee8c9">5. 总结</a></li>
+<li><a href="#org876ed20">4. 他们的928</a></li>
+<li><a href="#org1643795">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org100087e">
+<figure id="orga224c65">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org83ec870" class="outline-2">
-<h2 id="org83ec870"><span class="section-number-2">1.</span> <a href="#org83ec870">暑假</a></h2>
+<div id="outline-container-org3207662" class="outline-2">
+<h2 id="org3207662"><span class="section-number-2">1.</span> <a href="#org3207662">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgb33714c" class="outline-3">
-<h3 id="orgb33714c"><span class="section-number-3">1.1.</span> <a href="#orgb33714c">夏令营</a></h3>
+<div id="outline-container-org6ea747c" class="outline-3">
+<h3 id="org6ea747c"><span class="section-number-3">1.1.</span> <a href="#org6ea747c">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org0719488" class="outline-2">
-<h2 id="org0719488"><span class="section-number-2">2.</span> <a href="#org0719488">打工</a></h2>
+<div id="outline-container-org82460eb" class="outline-2">
+<h2 id="org82460eb"><span class="section-number-2">2.</span> <a href="#org82460eb">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org51f21c5" class="outline-2">
-<h2 id="org51f21c5"><span class="section-number-2">3.</span> <a href="#org51f21c5">我的928</a></h2>
+<div id="outline-container-orgca1aeb1" class="outline-2">
+<h2 id="orgca1aeb1"><span class="section-number-2">3.</span> <a href="#orgca1aeb1">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org89ece7d" class="outline-3">
-<h3 id="org89ece7d"><span class="section-number-3">3.1.</span> <a href="#org89ece7d">928演唱会(bushi</a></h3>
+<div id="outline-container-org28260d9" class="outline-3">
+<h3 id="org28260d9"><span class="section-number-3">3.1.</span> <a href="#org28260d9">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgea0639f">
+<figure id="orgd8b27a6">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgc0adde4">
+<figure id="org8131470">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb8ee158" class="outline-2">
-<h2 id="orgb8ee158"><span class="section-number-2">4.</span> <a href="#orgb8ee158">他们的928</a></h2>
+<div id="outline-container-org876ed20" class="outline-2">
+<h2 id="org876ed20"><span class="section-number-2">4.</span> <a href="#org876ed20">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org76ee8c9" class="outline-2">
-<h2 id="org76ee8c9"><span class="section-number-2">5.</span> <a href="#org76ee8c9">总结</a></h2>
+<div id="outline-container-org1643795" class="outline-2">
+<h2 id="org1643795"><span class="section-number-2">5.</span> <a href="#org1643795">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-08 21:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-10 02:49</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
