--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-10 02:49 -->
+<!-- 2022-11-11 02:50 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org641592b">1. What is Vectored IO</a></li>
-<li><a href="#orgce8a00f">2. Vectored IO in Linux</a></li>
-<li><a href="#org387653c">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#orgadab515">4. Examples</a>
+<li><a href="#org434cb4f">1. What is Vectored IO</a></li>
+<li><a href="#orgf633690">2. Vectored IO in Linux</a></li>
+<li><a href="#org204ce24">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org270fb9f">4. Examples</a>
 <ul>
-<li><a href="#org6ec13f0">4.1. <code>write()</code></a></li>
-<li><a href="#org113a835">4.2. <code>writev()</code></a></li>
+<li><a href="#org9bb2f09">4.1. <code>write()</code></a></li>
+<li><a href="#org623b69a">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org641592b" class="outline-2">
-<h2 id="org641592b"><span class="section-number-2">1.</span> <a href="#org641592b">What is Vectored IO</a></h2>
+<div id="outline-container-org434cb4f" class="outline-2">
+<h2 id="org434cb4f"><span class="section-number-2">1.</span> <a href="#org434cb4f">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-orgce8a00f" class="outline-2">
-<h2 id="orgce8a00f"><span class="section-number-2">2.</span> <a href="#orgce8a00f">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgf633690" class="outline-2">
+<h2 id="orgf633690"><span class="section-number-2">2.</span> <a href="#orgf633690">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org387653c" class="outline-2">
-<h2 id="org387653c"><span class="section-number-2">3.</span> <a href="#org387653c">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org204ce24" class="outline-2">
+<h2 id="org204ce24"><span class="section-number-2">3.</span> <a href="#org204ce24">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-orgadab515" class="outline-2">
-<h2 id="orgadab515"><span class="section-number-2">4.</span> <a href="#orgadab515">Examples</a></h2>
+<div id="outline-container-org270fb9f" class="outline-2">
+<h2 id="org270fb9f"><span class="section-number-2">4.</span> <a href="#org270fb9f">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org6ec13f0" class="outline-3">
-<h3 id="org6ec13f0"><span class="section-number-3">4.1.</span> <a href="#org6ec13f0"><code>write()</code></a></h3>
+<div id="outline-container-org9bb2f09" class="outline-3">
+<h3 id="org9bb2f09"><span class="section-number-3">4.1.</span> <a href="#org9bb2f09"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-org113a835" class="outline-3">
-<h3 id="org113a835"><span class="section-number-3">4.2.</span> <a href="#org113a835"><code>writev()</code></a></h3>
+<div id="outline-container-org623b69a" class="outline-3">
+<h3 id="org623b69a"><span class="section-number-3">4.2.</span> <a href="#org623b69a"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-10 02:49</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-11 02:50</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
