Update from https://github.com/thebesttv/eserver-static/commit/8baf16f180a2ea638aaef3d7c0458764e13a0368

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-11 02:50 -->
+<!-- 2022-11-12 02:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb5a117c">1. 暑假</a>
+<li><a href="#org1e30b50">1. 暑假</a>
 <ul>
-<li><a href="#orgceb7250">1.1. 夏令营</a></li>
+<li><a href="#orgcc9630c">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org23a513b">2. 打工</a></li>
-<li><a href="#org2d94981">3. 我的928</a>
+<li><a href="#orgf7befaa">2. 打工</a></li>
+<li><a href="#orgf9703f4">3. 我的928</a>
 <ul>
-<li><a href="#org555e9d4">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org72e0ab1">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org56b171b">4. 他们的928</a></li>
-<li><a href="#orgfd53192">5. 总结</a></li>
+<li><a href="#org5ed0442">4. 他们的928</a></li>
+<li><a href="#org6f7978b">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org8ac8eeb">
+<figure id="orge375078">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgb5a117c" class="outline-2">
-<h2 id="orgb5a117c"><span class="section-number-2">1.</span> <a href="#orgb5a117c">暑假</a></h2>
+<div id="outline-container-org1e30b50" class="outline-2">
+<h2 id="org1e30b50"><span class="section-number-2">1.</span> <a href="#org1e30b50">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgceb7250" class="outline-3">
-<h3 id="orgceb7250"><span class="section-number-3">1.1.</span> <a href="#orgceb7250">夏令营</a></h3>
+<div id="outline-container-orgcc9630c" class="outline-3">
+<h3 id="orgcc9630c"><span class="section-number-3">1.1.</span> <a href="#orgcc9630c">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org23a513b" class="outline-2">
-<h2 id="org23a513b"><span class="section-number-2">2.</span> <a href="#org23a513b">打工</a></h2>
+<div id="outline-container-orgf7befaa" class="outline-2">
+<h2 id="orgf7befaa"><span class="section-number-2">2.</span> <a href="#orgf7befaa">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org2d94981" class="outline-2">
-<h2 id="org2d94981"><span class="section-number-2">3.</span> <a href="#org2d94981">我的928</a></h2>
+<div id="outline-container-orgf9703f4" class="outline-2">
+<h2 id="orgf9703f4"><span class="section-number-2">3.</span> <a href="#orgf9703f4">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org555e9d4" class="outline-3">
-<h3 id="org555e9d4"><span class="section-number-3">3.1.</span> <a href="#org555e9d4">928演唱会(bushi</a></h3>
+<div id="outline-container-org72e0ab1" class="outline-3">
+<h3 id="org72e0ab1"><span class="section-number-3">3.1.</span> <a href="#org72e0ab1">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org0b978d3">
+<figure id="org6af4bbc">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org5d86497">
+<figure id="orgfb3c2b7">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org56b171b" class="outline-2">
-<h2 id="org56b171b"><span class="section-number-2">4.</span> <a href="#org56b171b">他们的928</a></h2>
+<div id="outline-container-org5ed0442" class="outline-2">
+<h2 id="org5ed0442"><span class="section-number-2">4.</span> <a href="#org5ed0442">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgfd53192" class="outline-2">
-<h2 id="orgfd53192"><span class="section-number-2">5.</span> <a href="#orgfd53192">总结</a></h2>
+<div id="outline-container-org6f7978b" class="outline-2">
+<h2 id="org6f7978b"><span class="section-number-2">5.</span> <a href="#org6f7978b">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-11 02:50</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-12 02:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
